Added question 6 and 7 and logic

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <script src="js/app.js"> </script>
-<audio controls autoplay>
-  <source src="img/GlassSubstrate.mp3">
-</audio>
+<!-- <audio controls autoplay>
+<source src="img/GlassSubstrate.mp3"> -->
+<!-- </audio> -->
 <body>
   <header>
     <h1>Zoe Unica Solaris a.k.a. ZuSolaris</h1>
@@ -28,12 +28,22 @@
   <p>Hi my name is Zoe, I love space, animation, and now coding! A few things about me? Oh well I am 22 years old. My favorite band is Motion City Soundtrack and my favorite song by them is "Floating down the river." (super existential song) I hope one day to be a software engineer for NASA that's my dream! I've been drawing for years and someone one day recommended animation so now I make animations for fun! I once got featured on the Powerwash Simulator game's twitter which was nice. I've swam in the middle of the pacific ocean off of a submarine... I was super scared. I love my 2002 Mustang which is my pride and joy. I love to make friends and meet new people! I hope one day to meet an astronaut!
   </p>
 <h2>Education</h2>
+<ul>
+  <li>Code Fellows: Code 102, September 2022
+  </li>
+  <li>Code Fellows: Code 101, July 2022
 
-<p>I graduated in 2018 from Diman Regional Vocational High School located in Fall River, Massachusetts. I specialized in Automotive Technology.
+  </li>
+  <li>ESM Journeyman: September 2021</li>
+  <li>Basic Enlisted Submarine School: July 2019</li>
+  
+</ul>
 <h2>Experience</h2>
-<p>
-In 2019 I enlisted into the United States Navy Submarine Force. I served as an Information Systems Technician. Some of my most proud and stressful moments were made there and I don't regret a minute. I honorably discharged on June 17, 2022 as a 2nd Class Petty Officer.
-</p>
+<ul>
+<li>
+  Information Systems Technician Submarines, United States Navy, 2019-2022
+</li>
+</ul>
 <h2>
 Goals
 </h2>
@@ -41,6 +51,18 @@ Goals
 I hope to one day see myself as a successful software developer..... but a lead engineer on an Aerospace project is my aspiration. I want to leave an impact beyond this world.. because everything is finite.
 
 </p>
+<ul>Zoe's Top Ten Favorite Songs
+  <li>'Floating Down the River' by Motion City Soundtrack</li>
+  <li>'Eastbound & Down' by WSTR</li>
+  <li>'Day to Live' by Daiki Kasho </li>
+  <li>'Look at the Sky' by Porter Robinson</li>
+  <li>'Good Time' by Owl City</li>
+  <li>'The Sound of Reverie' by The Maine </li>
+  <li>'A Life Less Ordinary (Need a Little Help)' by Motion City Soundtrack </li>
+  <li>'Sanity for Summer' by City Mouth, Justin Courtney Pierre,Syndey Sprague</li>
+  <li>'My Favorite Accident' by Motion City Soundtrack</li>
+  <li>'The Permanent Rain' by The Dangerous Summer</li>
+</ul>
 <footer>
 Zoe Gonzalez &copy  Music by Yasuhisa Inoue - Glass Substrate via Creative Commons
 
