--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <script src="js/app.js"> </script>
-<!-- <audio controls autoplay>
-<source src="img/GlassSubstrate.mp3"> -->
-<!-- </audio> -->
+<audio controls autoplay>
+<source src="img/GlassSubstrate.mp3">
+</audio>
 <body>
   <header>
     <h1>Zoe Unica Solaris a.k.a. ZuSolaris</h1>
